--- a/imports/ui/pages/notfound/notFound.html
+++ b/imports/ui/pages/notfound/notFound.html
@@ -1,5 +1,5 @@
 <template name="notFound">
-    <div class="container lea-pagenotfound-container">
+    <div class="container lea-pagenotfound-container py-5 my-5">
         {{#onLoaded loaded=componentsLoaded}}
             {{#jumbotron}}
                 <h1 class="text-center">
