--- a/imports/ui/pages/class/class.html
+++ b/imports/ui/pages/class/class.html
@@ -12,8 +12,43 @@
     {{/onLoaded}}
 
     {{#if dimensionDoc}}
-        {{#onLoaded loaded=sessionsLoaded}}
+        {{#unless otuleaConnected}}
+            <div class="alert alert-info">
+                {{> loading title="otulea"}}
+            </div>
+        {{/unless}}
+        {{#onLoaded loaded=feedbackLoaded}}
+            {{#unless hasFeedback}}
+                <div class="alert alert-warning mt-3">
+                    {{i18n "pages.class.noFeedback"}}
+                </div>
+            {{else}}
+                {{#with processed}}
+                    <h3>AlphaLevels</h3>
+                    <ul class="list-group">
+                        {{#each entry in this.alphaLevels}}
+                        <li class="list-group-item">
+                            {{entry.id}}: {{entry.score}} ({{entry.count}})
+                        </li>
+                        {{/each}}
+                    </ul>
 
+                    <h3>Competencies</h3>
+                    <ul class="list-group">
+                        {{#each entry in this.competencies}}
+                            <li class="list-group-item">
+                            <span>
+                                {{#with competencyDoc entry.id}}
+                                    {{this.description}}
+                                {{else}}
+                                    {{entry.id}}
+                                {{/with}}
+                            </span>: {{entry.score}} ({{entry.count}})
+                            </li>
+                        {{/each}}
+                    </ul>
+                {{/with}}
+            {{/unless}}
         {{/onLoaded}}
     {{/if}}
 </template>
